<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="10dp"
    tools:context=".Activities.Activity.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="-20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/earn_easy_logo"
        tools:ignore="ContentDescription" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:gravity="center"
                android:text="@string/create_account"
                android:textColor="#D5052E"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="80dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#E40733" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/usersvg"
                android:drawablePadding="13dp"
                android:drawableTint="#D5052E"
                android:ems="10"
                android:fontFamily="@font/alata"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="15dp" />


            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="13dp"
                android:drawableTint="#D5052E"
                android:ems="10"
                android:fontFamily="@font/alata"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/passwordsvg"
                android:drawablePadding="13dp"
                android:ems="10"
                android:fontFamily="@font/alata"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp" />

            <EditText
                android:id="@+id/editTextRefer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/refer_ic"
                android:drawablePadding="13dp"
                android:drawableTint="#D5052E"
                android:ems="10"
                android:fontFamily="@font/alata"
                android:hint="Referral Code"
                android:inputType="text"
                android:padding="15dp" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3sp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/alata"
                android:padding="12dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1.1"
                    android:fontFamily="@font/alata"
                    android:gravity="end"
                    android:text="Already have an Account?"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight=".5"
                    android:fontFamily="@font/alata"
                    android:text="@string/sign_in"
                    android:textColor="#D5052E"
                    android:textSize="16sp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/alata"
                android:gravity="center"
                android:text="@string/by_sighing_in_we_will_consider_that_you_are_agree_nto_the_terms_and_conditions"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>